# bingoCube

./: .gitignore  AUDIO_DEPENDENCY_EVOLUTION_NOTE.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  REPO_EXTRACTION_PLAN.md  deny.toml
adapters/: Cargo.toml
adapters/src/: animation.rs  audio.rs  lib.rs  visual.rs
core/: Cargo.toml
core/src/: lib.rs
demos/: Cargo.toml
demos/src/: interactive.rs  main.rs
nautilus/: Cargo.toml
nautilus/examples/: full_brain_rehearsal.rs  live_qcd_prediction.rs  predict_live_exp029.rs  quenched_to_dynamical.rs  shell_lifecycle.rs
nautilus/src/: brain.rs  constraints.rs  evolution.rs  evolve.rs  lib.rs  population.rs  readout.rs  response.rs  shell.rs  snapshot.rs
whitePaper/: BingoCube-Biometric-Identity.md  README.md
