[workspace]
resolver = "2"

members = [
    "core",
    "adapters",
    "demos",
    "nautilus",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoPrimals/bingoCube"
authors = ["ecoPrimals Team"]
description = "Human-verifiable cryptographic commitment system"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
bingocube-core = { path = "core", version = "0.1.1" }
bingocube-adapters = { path = "adapters", version = "0.1.1" }
bingocube-nautilus = { path = "nautilus", version = "0.1.1" }
blake3 = { version = "1.5", default-features = false, features = ["pure"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
rand = "0.8"
egui = "0.29"
eframe = "0.29"

