[package]
name = "bingocube-nautilus"
description = "Evolutionary reservoir computing via BingoCube board populations — the nautilus shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bingocube-core.workspace = true
blake3.workspace = true
rand.workspace = true
rand_chacha = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "shell_lifecycle"
required-features = []
