[package]
name = "bingocube-nautilus"
description = "Evolutionary reservoir computing via BingoCube board populations — the nautilus shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Same baseline as workspace lints; nautilus is numerical / ML-style code with intentional patterns.
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
collapsible_if = "allow"
collection_is_never_read = "allow"
doc_markdown = "allow"
imprecise_flops = "allow"
items_after_statements = "allow"
manual_range_contains = "allow"
many_single_char_names = "allow"
map_unwrap_or = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_range_loop = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
redundant_clone = "allow"
return_self_not_must_use = "allow"
suboptimal_flops = "allow"
too_many_lines = "allow"
unnecessary_map_or = "allow"
unnecessary_wraps = "allow"
uninlined_format_args = "allow"
redundant_closure_for_method_calls = "allow"
use_self = "allow"

[dependencies]
bingocube-core.workspace = true
blake3.workspace = true
rand.workspace = true
rand_chacha = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true

[features]
default = []
json = []

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "shell_lifecycle"
required-features = []

[[example]]
name = "live_qcd_prediction"
required-features = []

[[example]]
name = "quenched_to_dynamical"
required-features = []

[[example]]
name = "predict_live_exp029"
required-features = []

[[example]]
name = "full_brain_rehearsal"
required-features = []
